--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          # Update to use Node.js 16
+          node-version: '16'
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
+        with:
+          # Update to use Node.js 16
+          tf_version: '1.1.0'
+          node_version: '16'
 
       - name: Terraform init
         run: terraform init
