--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           # Update to use Node.js 16
-          node-version: '16'
+          node-version: '16.x'
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           # Update to use Node.js 16
-          tf_version: '1.1.0'
-          node_version: '16'
+          terraform_version: '1.1.0'
+          terraform_wrapper: false
 
       - name: Terraform init
         run: terraform init
