--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,16 +12,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          # Update to use Node.js 16
-          node-version: '16.x'
+          node-version: '16'
 
       - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          # Update to use Node.js 16
-          terraform_version: '1.1.0'
-          terraform_wrapper: false
+        run: |
+          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp.gpg
+          echo "deb [signed-by=/usr/share/keyrings/hashicorp.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list > /dev/null
+          sudo apt-get update && sudo apt-get install terraform
 
       - name: Terraform init
         run: terraform init
