--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,29 @@
+# This file is a template, and might need editing before it works on your project.
+# This is a sample GitLab CI/CD configuration file that should run without any modifications.
+# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
+# it uses echo commands to simulate the pipeline execution.
+#
+# A pipeline is composed of independent jobs that run scripts, grouped into stages.
+# Stages run in sequential order, but jobs within stages run in parallel.
+#
+# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
+#
+# You can copy and paste this template into a new `.gitlab-ci.yml` file.
+# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
+#
+# To contribute improvements to CI/CD templates, please follow the Development guide at:
+# https://docs.gitlab.com/ee/development/cicd/templates.html
+# This specific template is located at:
+# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
+
+
 stages:
- - plan
+  - plan
 
-variables:
- TF_VAR_token: $CI_JOB_TOKEN
- TF_VAR_workspace: $CI_COMMIT_REF_NAME
-
-plan :
- stage: plan
- image: ruby:3.1
- script:
+plan:
+  stage: plan
+  image: ruby:3.1
+  script:
     - apt-get update && apt-get install -y unzip # Install unzip (required for Terraform)
     - curl -fsSL https://releases.hashicorp.com/terraform/0.12.31/terraform_0.12.31_linux_amd64.zip -o terraform.zip
     - unzip terraform.zip -d /usr/local/bin
@@ -16,7 +31,7 @@ plan :
     - export TF_WORKSPACE=$TF_VAR_workspace
     - terraform login
     - terraform init
-    - terraform plan
- only:
+    - terraform plan -out=tfplan.out
+  only:
     - main
- when: always
+  when: manual
