--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,37 +1,25 @@
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Terraform.gitlab-ci.yml
-
-include:
-  - template: Terraform/Base.gitlab-ci.yml  # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.gitlab-ci.yml
-  - template: Jobs/SAST-IaC.gitlab-ci.yml   # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Jobs/SAST-IaC.gitlab-ci.yml
-
 stages:
-  - validate
-  - test
-  - build
-  - deploy
-  - cleanup
+  - init
+  - plan
 
-fmt:
-  extends: .terraform:fmt
-  needs: []
+variables:
+  TF_VAR_organization: "nbs007"
 
-validate:
-  extends: .terraform:validate
-  needs: []
+init:
+  stage: init
+  image: "hashicorp/terraform:latest"
+  script:
+    - export TF_TOKEN="$TF_VAR_token" # Set environment variable TF_TOKEN
+    - export TF_WORKSPACE="$TF_VAR_workspace" # Set environment variable TF_WORKSPACE
+    - terraform init \
+        -backend-config="address=https://app.terraform.io" \
+        -backend-config="organization=$TF_VAR_organization" # Replace with your Terraform org
+        -backend-config="workspaces.name=$TF_VAR_workspace" \
+        -backend-config="token=$TF_VAR_token"
 
-build:
-  extends: .terraform:build
-  environment:
-    name: $TF_STATE_NAME
-    action: prepare
-
-deploy:
-  extends: .terraform:deploy
-  dependencies:
-    - build
-  environment:
-    name: $TF_STATE_NAME
-    action: start
+plan:
+  stage: plan
+  image: "hashicorp/terraform:latest"
+  script:
+    - terraform plan \
+        -var="some_variable=value" # Add any additional variables if needed
